Fix: CORS y landing page

--- a/vercel.json
+++ b/vercel.json
@@ -41,7 +41,7 @@
     },
     {
       "src": "/",
-      "dest": "/public/login.html"
+      "dest": "/public/index.html"
     },
     {
       "src": "/(.*)",
