--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,15 @@
 {
   "version": 2,
   "functions": {
-    "api/*.js": {
+    "api/index.js": {
       "memory": 1024,
       "maxDuration": 10
     }
   },
   "rewrites": [
     {
-      "source": "/api/auth/:path*",
-      "destination": "/api/auth?path=:path*"
-    },
-    {
-      "source": "/api/orders/:path*",
-      "destination": "/api/orders?path=:path*"
-    },
-    {
-      "source": "/api/admin/:path*",
-      "destination": "/api/admin?path=:path*"
-    },
-    {
-      "source": "/api/services",
-      "destination": "/api/services/index"
+      "source": "/api/:path*",
+      "destination": "/api/index"
     },
     {
       "source": "/",
